All notable changes to ampycloud will be documented in this file.

The format is inspired from [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).
This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added:
 - [fpavogt, 2021-12-15] Add `msa` to `plots.diagnostic`, i.e. fix #22.
 - [fpavogt, 2021-12-10] Add Minimum Sector Altitude to the metar_msg() method.
 - [fpavogt, 2021-12-10] Add detailed examples to the core functions, and link them in the doc.
 - [fpavogt, 2021-12-10] Add the performance module, and a dedicated high level entry point.
 - [fpavogt, 2021-12-10] Improve plots with show, save, close methods, and tweak their look.
 - [fpavogt, 2021-12-10] Add pytest ficture to let users feed 'MPL_STYLE' as a command line argument
 - [fpavogt, 2021-12-09] Add the plots module.
 - [fpavogt, 2021-12-08] Add the MANIFEST.in file, to include parameter and plot style files.
 - [fpavogt, 2021-12-08] Add the data, dynamic, and core modules, and a new AmpycloudWarning class.
 - [fpavogt, 2021-12-07] Add the wmo, scaler, layer, cluster, and utils.mocker modules.
 - [fpavogt, 2021-12-07] Add the AmpycloudError class.
 - [fpavogt, 2021-12-06] Setup logging tools, incl. custom decorator for fcts.
 - [fpavogt, 2021-12-06] Setup docs, including instructions and a CI/CD "check" Action.
 - [fpavogt, 2021-12-06] Initial Github upload, incl. CI/CD actions, package & test infrastructure.
### Fixed:
 - [fpavogt, 2021-12-15] Fix bug in `CeiloChunk.metar_msg()` when all clouds are above the MSA.
 - [fpavogt, 2021-12-12] Fix the format_slices() method of the DiagnosticPlot class.
 - [fpavogt, 2021-12-09] Fix #5.
 - [fpavogt, 2021-12-08] Fix #14.
### Changed:
 - [fpavogt, 2021-12-16] Change the approach of the dynamic module to exploit yaconfigobject (fixes #24).
 - [fpavogt, 2021-12-08] Change `mock_layer` to return a pd.DataFrame instead of a np.ndarray.
### Deprecated:
### Removed:
### Security: