@@ -6,6 +6,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 
 ## [Unreleased]
 ### Added:
+ - [fpavogt, 2021-12-16] Add a new entry point for `copy_prm_file`, i.e. fix #26.
  - [fpavogt, 2021-12-15] Add `msa` to `plots.diagnostic`, i.e. fix #22.
  - [fpavogt, 2021-12-10] Add Minimum Sector Altitude to the metar_msg() method.
  - [fpavogt, 2021-12-10] Add detailed examples to the core functions, and link them in the doc.
